--- a/index.html
+++ b/index.html
@@ -523,11 +523,9 @@
     <div class="w-layout-blockcontainer sub-container w-container">
       <div class="w-layout-grid mockup_grid">
         <h3 class="heading-2">MOCKUP</h3><img
-          src="https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%20fidelty.png"
+          src="./assets/mockup_highfid.png"
           loading="lazy" alt=""
-          sizes="(max-width: 479px) 320px, (max-width: 767px) 100vw, (max-width: 991px) 95vw, 940.0000610351562px"
           id="w-node-_2830fbe5-5d05-2408-685b-5116c8f48365-386979a4"
-          srcset="https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-500.png 500w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-800.png 800w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-1080.png 1080w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-1600.png 1600w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-2000.png 2000w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-2600.png 2600w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%2520fidelty-p-3200.png 3200w, https://assets-global.website-files.com/6531864cfbf161df386979a5/6531864cfbf161df386979cc_high%20fidelty.png 4000w" />
         <div data-delay="5000" data-animation="slide" class="slider-2 w-slider" data-autoplay="true" data-easing="ease"
           data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="4"
           data-duration="1500" data-infinite="true">
